<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Projeto GPS</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="gps_button">Tela do GPS</string>
  <string name="navigation_button">Navegação em Tempo Real</string>
  <string name="configuration_button">Configuração</string>
  <string name="credit_button">Créditos</string>
  <string name="title_activity_navigation">Tela de Navegação</string>
  <string name="latitudeTextView">Latitude</string>
  <string name="longitudeTextView">Longitude</string>
  <string name="altitudeTextView">Altitude</string>
  <string name="exit_button">Sair</string>
  <string name="glauber_button">Gláuber Brennon</string>
  <string name="fabinho_button">Fábio Santana</string>
  <string name="matheus_button">Matheus Pereira</string>
  <string name="decimals_radio">Graus decimais</string>
  <string name="minutes_radio">Graus, Minutos decimais</string>
  <string name="seconds_radio">Graus, Minutos, Segundos decimais</string>
  <string name="title_text">Configurações</string>
  <string name="setConfigButton">Confirma</string>
  <string name="azimuthTextView">New Text</string>
  <string name="satellite1AzimuthView">Satelite Azimuth</string>
  <string name="connected_satellites_view">Satelites Conectados</string>
  <string name="visibleSatelliteTextView">Satelites Visíveis</string>
</resources>
