<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">
  <RadioGroup
      android:id="@+id/radioConfiguration"
      android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decimals_radio"
        android:id="@+id/radioDecimals" android:checked="false" android:layout_gravity="center_horizontal"/>
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/minutes_radio"
        android:id="@+id/radioMinutes" android:layout_gravity="center_horizontal"/>
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seconds_radio"
        android:id="@+id/radioSeconds" android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setConfigButton"
        android:id="@+id/setConfigButton" android:layout_gravity="center_horizontal"/>
  </RadioGroup>
</LinearLayout>