<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projetogps.MainActivity" >

    <Button
        android:id="@+id/gpsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_button" />

    <Button
        android:id="@+id/navigationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_button" />

    <Button
        android:id="@+id/configurationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration_button" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_button" />

</LinearLayout>
